--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,13 +7,6 @@
   with_items:
     - python-netaddr
 
-- name: Disable swap
-  command: swapoff -a
-
-- name: Remove swapfile from /etc/fstab
-  mount:
-    name: swap
-    fstype: swap
-    state: absent
+- include: swap.yml
 
 - include: jinja.yml
